Fix overflow

--- a/css/wrapper/wrapper.css
+++ b/css/wrapper/wrapper.css
@@ -1,4 +1,5 @@
 .wrapper {
+    overflow: hidden;
     background:#0F0D14; 
 
     background:  url(../../src/main/devices.png) -30px 0 no-repeat local, url(../../src/header/background.png) 0 0 no-repeat local;
